# course

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  GNUmakefile  LICENSE  Presentation1.pptx  README.md  SCORE.md  books.sh  danmu.py  getaudio.sh  main.py  new.cpp  qt-danmu.py
04/6_structs/08_benchmark/: CMakeLists.txt  aos.cpp  aos_aligned.cpp  aos_parallel.cpp  aosoa.cpp  common.h  main.cpp  run.sh  soa.cpp  soa_parallel.cpp  soa_simd.cpp  soa_size_t.cpp  soa_unroll.cpp  test.py
04/8_benchmark/01/: CMakeLists.txt  aos.cpp  aos_parallel.cpp  aosoa.cpp  common.h  main.cpp  profile.h  soa.cpp  soa_simd.cpp  soa_size_t.cpp  soa_unroll.cpp
04/9_cmake/: CMakeLists.txt  profile.h  run.sh
06/03_benchmark/05/: CMakeLists.txt  main.cpp
06/03_benchmark/05/benchmark/: .clang-format  .clang-tidy  .gitignore  .travis.yml  .ycm_extra_conf.py  AUTHORS  BUILD.bazel  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTORS  README.md  WORKSPACE  _config.yml  appveyor.yml  requirements.txt  setup.py
06/03_benchmark/05/benchmark/.github/: .libcxx-setup.sh
06/03_benchmark/05/benchmark/cmake/: AddCXXCompilerFlag.cmake  CXXFeatureCheck.cmake  Config.cmake.in  GetGitVersion.cmake  GoogleTest.cmake  GoogleTest.cmake.in  benchmark.pc.in  gnu_posix_regex.cpp  llvm-toolchain.cmake  posix_regex.cpp  split_list.cmake  std_regex.cpp  steady_clock.cpp  thread_safety_attributes.cpp
06/03_benchmark/05/benchmark/docs/: AssemblyTests.md  dependencies.md  index.md  perf_counters.md  platform_specific_build_instructions.md  random_interleaving.md  releasing.md  tools.md  user_guide.md
06/03_benchmark/05/benchmark/src/: CMakeLists.txt  arraysize.h  benchmark.cc  benchmark_api_internal.cc  benchmark_api_internal.h  benchmark_main.cc  benchmark_name.cc  benchmark_register.cc  benchmark_register.h  benchmark_runner.cc  benchmark_runner.h  check.h  colorprint.cc  colorprint.h  commandlineflags.cc  commandlineflags.h  complexity.cc  complexity.h  console_reporter.cc  counter.cc  counter.h  csv_reporter.cc  cycleclock.h  internal_macros.h  json_reporter.cc  log.h  mutex.h  perf_counters.cc  perf_counters.h  re.h  reporter.cc  sleep.cc  sleep.h  statistics.cc  statistics.h  string_util.cc  string_util.h  sysinfo.cc  thread_manager.h  thread_timer.h  (+2 more)
06/03_benchmark/05/benchmark/test/: AssemblyTests.cmake  BUILD  CMakeLists.txt  args_product_test.cc  basic_test.cc  benchmark_gtest.cc  benchmark_name_gtest.cc  benchmark_random_interleaving_gtest.cc  benchmark_setup_teardown_test.cc  benchmark_test.cc  clobber_memory_assembly_test.cc  commandlineflags_gtest.cc  complexity_test.cc  cxx03_test.cc  diagnostics_test.cc  display_aggregates_only_test.cc  donotoptimize_assembly_test.cc  donotoptimize_test.cc  filter_test.cc  fixture_test.cc  internal_threading_test.cc  link_main_test.cc  map_test.cc  memory_manager_test.cc  multiple_ranges_test.cc  options_test.cc  output_test.h  output_test_helper.cc  perf_counters_gtest.cc  perf_counters_test.cc  register_benchmark_test.cc  repetitions_test.cc  report_aggregates_only_test.cc  reporter_output_test.cc  (+9 more)
07/07_morton/02/: CMakeLists.txt  main.cpp
07/0z_test/04/: CMakeLists.txt
09/01_texture/.trashed08lerp/: CMakeLists.txt  main.cu  writevdb.cpp
10/00/: 00.cpp  01.cpp  02.cpp  03.cpp  04.cpp  05.cpp  06.cpp  07.cpp  08.cpp  09.cpp  10.cpp  CMakeLists.txt  bate.h
11/02_flags/02/: CMakeLists.txt
11/02_flags/03/: CMakeLists.txt
11/02_flags/06/: CMakeLists.txt
11/02_flags/09/: CMakeLists.txt
11/02_project/02/: CMakeLists.txt
11/02_project/02/mylib/: CMakeLists.txt
11/02_project/08/: CMakeLists.txt
11/02_project/09/: CMakeLists.txt
11/template/: CMakeLists.txt  main.cpp
16/00/: .tasks  CMakeLists.txt
16/00/biology/: CMakeLists.txt
16/00/biology/src/: Animal.cpp  Carer.cpp
16/00/cmake/: MyUsefulFuncs.cmake  UsefulFuncs.cmake
16/00/pybmain/: CMakeLists.txt
16/00/pybmain/src/: main.cpp
16/01/: CMakeLists.txt  main.cpp
benchtest/: .tasks  CMakeLists.txt  demo1.cpp  test.cpp
slides/atomic/: CMakeLists.txt  armshell.sh  compare_and_swap.cpp  concurrent_list.hpp  example.cpp  fetch_add.cpp  fetch_add_release.cpp  fetch_apply.cpp  introduction.cpp  list_teardown_pop.cpp  list_teardown_pop_wait.cpp  list_teardown_size.cpp  main.cpp  memory_order.cpp  mtpool.hpp  no_aba_concurrent_stack.cpp  objdump.sh  protect_other.cpp  run.sh  simple_concurrent_stack.cpp  spin_barrier.cpp  spin_barrier.hpp  spin_mutex.cpp  spin_mutex.hpp  spin_mutex_2.cpp  spin_mutex_cpp20_wait.cpp  test.cpp  vector_atomic_push_back.cpp
slides/bench/: BM_latency.csv  BM_struct.csv  CMakeLists.txt  chart.py  main.cpp  result.csv  scaling.sh  test.cpp
slides/bind/: CMakeLists.txt  Signal.hpp  feat.cpp  main.cpp
slides/cudagemm/: .env  CMakeLists.txt  README.md  cloth.cu  tinybench.hpp
slides/iostream/: CMakeLists.txt  cppstream.cpp  cstdio.cpp  main.cpp  ostream.cpp  stdin.cpp
slides/mallochook/: CMakeLists.txt  alloc_action.hpp  check.cpp  hook.cpp  main.cpp  plot.cpp  step2.cpp
slides/moderncuda/: CMakeLists.txt  README.md  better_cuda.cuh  cloth.cu  cudapp.cuh  debug.hpp  example.cu  main.cu  tinybench.cpp  tinybench.hpp  try_fix_amx.hpp
slides/moderncuda/example/: example.cu  kernel.cu  kernel.ptx
slides/oldatomic/: CMakeLists.txt  arm_student_main.cpp  disasm.sh  main.cpp  mtverify.hpp  parallel_pool.hpp
slides/reflect/: CMakeLists.txt  example_complex.cpp  example_jsoncpp.cpp  example_pybind.cpp  foreachgen.py  main.cpp  main2.cpp  reflect.hpp  reflect_json.hpp  tag.cpp
slides/warnings/: C.h  CMakeLists.txt  README.md  func.cpp  func.h  main.cpp
specifelse/benchtest/: .gitignore  .tasks  CMakeLists.txt  demo0.cpp
specifelse/benchtest/benchmark/: CMakeLists.txt
specifelse/benchtest/jomt/: .gitignore  .tasks  CMakeLists.txt  README.md
specifelse/benchtest/jomt/src/: CMakeLists.txt  benchmark_results.cpp  commandline_handler.cpp  main.cpp  mainwindow.cpp  plot_parameters.cpp  plotter_3dbars.cpp  plotter_3dsurface.cpp  plotter_barchart.cpp  plotter_boxchart.cpp  plotter_linechart.cpp  result_parser.cpp  result_selector.cpp  series_dialog.cpp
(+1739 files in other folders)
